# domd

./: .dodocker  .doignore  .doingore  .domdignore  .env.example  .gitignore  .pre-commit-config.yaml  2.pre-commit-config.yaml  CHANGELOG.md  DONE.md  Dockerfile  Makefile  README.md  README_NEW.md  START.md  TODO.txt  dodocker.md  mkdocs.yml  package.json  publish.sh  pyproject.toml  run_web.py  setup.cfg  setup.py  src.txt  test_commands.txt  test_in_docker.sh  tox.ini
.github copy/workflows/: analyze.yml  deploy.yml  static-deploy.yml
.github/wrokflows/: ci.yaml
ansible/: ansible.cfg  requirements.yml  site.yml
ansible/inventory/: production
docker-test/: .dockerignore  Dockerfile  build_and_run.sh  test_domd.py  test_install.sh
docs/: DOCUMENTATION_STRUCTURE.md  command_testing.md  docker.md  domdignore.md  done.md  how-to-llm.md  index.md  installation.md  mkdocs.yml  todo.md  usage.md
docs/api-reference/: command-handler.md
docs/development/: ansible-tests.md  contributing.md  testing.md
docs/features/: ansible.md  core.md
docs/user-guide/: command-reference.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/tests/: login.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CommandDetails.tsx  Commands.tsx  Dashboard.tsx  Login.tsx  Reports.tsx  Settings.tsx
scripts/: build.sh  build_docs.sh  check_docker.sh  check_version.py  clean_backend.sh  clean_frontend.sh  clean_install.sh  dev_setup.sh  format_backend.sh  format_frontend.sh  fresh_install.sh  install_backend.sh  install_deps.sh  install_frontend.sh  install_in_home.sh  lint_backend.sh  lint_frontend.sh  publish.sh  reset_db.sh  run_tests.sh  setup_dev.sh  setup_environment.sh  start.sh  start_frontend.sh  stop.sh  test_api.sh  test_commands.sh  test_commands_in_docker.py  update_backend_deps.sh  update_frontend_deps.sh
site/: 404.html  index.html  mkdocs.yml  search.html
site/api/: index.html
site/development/ansible-tests/: index.html
site/development/testing/: index.html
site/docker/: index.html
site/domdignore/: index.html
site/done/: index.html
site/features/ansible/: index.html
site/features/core/: index.html
site/how-to-llm/: index.html
site/installation/: index.html
site/search/: search_index.json
site/todo/: index.html
site/usage/: index.html
src/domd/: __init__.py  api.py  cli.py  detector.py
src/domd/adapters/api/: command_testing.py  flask_api.py
src/domd/adapters/cli/: command_presenter.py
src/domd/adapters/formatters/: markdown_formatter.py
src/domd/adapters/persistence/: in_memory_command_repository.py  shell_command_executor.py
src/domd/application/: factory.py
src/domd/cli/: __init__.py  cli.py
src/domd/cli/commands/: test_commands.py
src/domd/command_execution/: __init__.py
src/domd/core/: __init__.py  detector.py
src/domd/core/command_detection/: __init__.py  base_detector.py  docker_tester.py  models.py  project_detector.py
src/domd/core/command_execution/: __init__.py  command_executor.py  command_recorder.py  command_runner.py  environment_detector.py  executor.py
src/domd/core/commands/: __init__.py  command.py  executor.py
src/domd/core/domain/: command.py
src/domd/core/parsers/: __init__.py  ansible_galaxy.py  ansible_inventory.py  ansible_playbook.py  ansible_role.py  ansible_vault.py  base.py  cargo_toml.py  composer_json.py  docker_compose.py  dockerfile.py  go_mod.py  makefile.py  package_json.py  pyproject_toml.py  tox_ini.py
src/domd/core/parsing/: __init__.py  base.py  file_processor.py  parser_registry.py  pattern_matcher.py
src/domd/core/ports/: command_executor.py  command_repository.py  report_formatter.py
src/domd/core/project_detection/: __init__.py  command_handling.py  config_files.py  detector.py  virtualenv.py
src/domd/core/reporters/: __init__.py  base.py  done_md.py  todo_md.py
src/domd/core/reporting/: __init__.py  formatters.py  reporter.py
src/domd/core/services/: command_service.py  report_service.py
src/domd/core/utils/: __init__.py  command_utils.py  environment.py  file_utils.py  logging_utils.py  virtualenv.py
src/domd/parsers/: __init__.py  ansible.py  base.py  build_systems.py  ci_cd.py  markdown_parser.py  package_json.py  python.py  test_build_systems.py  test_javascript.py
src/domd/parsers/docker/: __init__.py  docker_compose.py  dockerfile.py
src/domd/parsers/javascript/: __init__.py
src/domd/parsing/: __init__.py  base.py
src/domd/reporters/: console.py  json_reporter.py  test_console.py  todo_md.py
src/domd/reporting/: __init__.py
src/domd/utils/: command_runner.py  path_utils.py  test_command_runner.py  virtualenv.py
src/todomd/: __init__.py  cli.py  detector.py
src/todomd/parsers/: docker.py  javascript.py  python.py  test_ci_cd.py  test_python.py
src/todomd/reporters/: test_json_reporter.py  test_todo_md.py
src/todomd/utils/: file_utils.py  test_file_utils.py
tests/: conftest.py  test_ansible.py  test_ansible_galaxy.py  test_ansible_inventory.py  test_ansible_playbook.py  test_ansible_roles.py  test_ansible_vault.py  test_cli.py  test_command_handling.py  test_command_testing.py  test_detector.py  test_virtualenv.py
tests/ansible/: README.md  requirements.txt  test_login.yml
tests/fixtures/: __init__.py  ansible_helpers.py
tests/helpers/: __init__.py  test_utils.py
tests/integration/: test_clean_architecture.py  test_docker_integration.py
tests/integration/cli/: test_cli.py
tests/integration/core/command_handling/: test_dodocker.py
tests/integration/core/detector/: test_detector_integration.py
tests/integration/parsers/: test_parser_integration.py
tests/unit/: test_command_executor.py  test_environment.py
tests/unit/adapters/: test_shell_command_executor.py
tests/unit/parsers/: test_base_parser.py  test_config_parsers.py
tests/unit/reporters/: test_todo_md_reporter.py
tests/unit/utils/: test_path_utils.py
(+12 files in other folders)
