[metadata]
name = domd
version = 2.2.33
description = DoMD - Do Markdown Docs - automatically detect, run and show working commands in DONE.md and errors in TODO.md markdown files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wronai/domd
author = Tom Sapletta
author_email = info@softreck.dev
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9,<4.0
install_requires =
    pyyaml>=6.0
    toml>=0.10.2
    configparser>=5.3.0
    docker>=6.1.3
    flask-cors>=6.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    domd = domd.cli:main
    domd-api = domd.api:main
    project-detector = domd.cli:main
    cmd-detector = domd.cli:main
